--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
         </div>
     </main>
 
+    <footer>
+        <img src="footer-image.png" alt="Footer Image">
+      </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
