--- a/branch.html
+++ b/branch.html
@@ -26,7 +26,10 @@
         </div>
     </main>
 
-    
+    <footer>
+        <img src="Designer (48).jpeg" alt="Footer Image">
+      </footer>
+
 
     <script src="script.js"></script>
 </body>
