--- a/physics.html
+++ b/physics.html
@@ -35,7 +35,10 @@
         </div>
     </main>
 
- 
+    <footer>
+        <img src="footer-image.png" alt="Footer Image">
+      </footer>
+
 
     <script src="script.js"></script>
 </body>
