--- a/chemistry.html
+++ b/chemistry.html
@@ -31,6 +31,11 @@
         </div>
     </main>
 
+    <footer>
+        <img src="Designer (50).jpeg" alt="Footer Image">
+      </footer>
+
+   
     
 
     <script src="script.js"></script>
